--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
               yourself, while having fun doing it! <br />
 
               If you want to see if I’m the right instructor for you or just
-              learn a little more about Pilates in general,
-              <a href="mailto:rhispilates@gmail.com">
-                click here to schedule a free 15-minute consultation : Ask
-                Rhi</a
-              >
+              learn a little more about Pilates in general, Ask Rhi! <!-- Calendly link widget begin -->
+              <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+              <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+              <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/rhispilates/ask-rhi'});return false;"> Click here to schedule a free 15-minute consultation</a>
+              <!-- Calendly link widget end -->
+              
             </p>
           </div>
         </div>
