--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <link rel="icon" type="image/x-icon" href="css/images/favicon.ico">
+
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +31,7 @@
       <img class="hero" src="css/images/rhiHero.jpeg" alt="" />
       <div class="container">
         <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">Rhi's Pilates</a>
             <button
@@ -71,29 +74,29 @@
           <div class="col-md-6">
             <h1 class="ImRhi">Hi I'm Rhi!</h1>
             <p class="bioText">
-              Growing up in a holistic household, Pilates and healthy living has
+              Growing up in a holistic household, pilates and healthy living have
               been a part of my life for as long as I can remember.
               Transitioning from competitive dancing to pilates, I aspire to
               bring a fun & upbeat experience to my students, grounded in
-              detail-oriented classical approach. Upon receiving my Pilates
+              detail-oriented classical approach. Upon receiving my pilates
               certification through Core Pilates NYC, I have been blessed to
-              spend the past 5 years teaching Pilates across Manhattan at
-              Equinox & Uptown Pilates locations. <br />
+              spend the past 5 years teaching pilates across Manhattan at
+              Equinox & Uptown Pilates locations. <br /> <br />
 
-              Whether you are new to Pilates or an advanced student, I will work
+              Whether you are new to pilates or an advanced student, I will work
               with you to tailor a custom program that addresses your specific
-              goals. I have experience teaching my students through Pilates to
+              goals. I have experience teaching my students through pilates to
               improve their core strength, flexibility, mental health, overcome
               injuries, and prepare for child-birth. There is nothing more
               important than the mind-body connection and with a little bit of
               effort, I can challenge you to become the best version of
-              yourself, while having fun doing it! <br />
+              yourself, while having fun doing it! <br /><br />
 
               If you want to see if I’m the right instructor for you or just
-              learn a little more about Pilates in general, Ask Rhi! <!-- Calendly link widget begin -->
+              learn a little more about pilates in general, Ask Rhi! <br /> <!-- Calendly link widget begin -->
               <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
               <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-              <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/rhispilates/ask-rhi'});return false;"> Click here to schedule a free 15-minute consultation</a>
+              <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/rhispilates/ask-rhi'});return false;"> Click here to schedule your free 15-minute consultation</a>
               <!-- Calendly link widget end -->
               
             </p>
@@ -106,7 +109,7 @@
       <div class="container">
         <!-- Locations -->
 
-        <h1 class="locationTitle">Available Locations</h1>
+        <h1 class="locationTitle">My Pilates Locations</h1>
         <h2 class="locationSubhead">Schedule Your First Class Today</h2>
 
         <div class="row row-cols-1 row-cols-md-3 row-cols-md-2 g-4">
@@ -119,12 +122,10 @@
               />
               <div class="card-body">
                 <h5 class="card-title">Uptown Pilates</h5>
-                <p class="address">136 W 72nd St (Columbus Ave)</p>
-                <p class="cost">$100 per 1-hour session</p>
-
+                <p class="address">136 W 72nd St (Columbus Ave) <br>$100 per 1-hour session</p>
                 <a
-                  href="https://clients.mindbodyonline.com/asp/adm/adm_appt_search.asp"
-                  class="btn btn-local"
+                  href="https://clients.mindbodyonline.com/asp/adm/adm_appt_search.asp?studioid=172961&fl=true&tabID=9"
+                  class="btn btn-local" 
                   >Schedule Session</a
                 >
                 <a
@@ -145,8 +146,7 @@
               />
               <div class="card-body">
                 <h5 class="card-title">Equinox</h5>
-                <p class="address">97 Greenwich Avenue (12th Street)</p>
-                <p class="cost">$125 per 1-hour session</p>
+                <p class="address">97 Greenwich Avenue (12th Street) <br>$125 per 1-hour session</p>
 
                 <a href="https://www.equinox.com/pilates" class="btn btn-local"
                   >Equinox Pilates</a
@@ -169,8 +169,8 @@
               />
               <div class="card-body">
                 <h5 class="card-title">Private or Virtual Session</h5>
-                <p class="address">
-                  You can zoom from the comfort of your home or we can reserve a
+                <p class="virtualMessage">
+                  Zoom from the comfort of your home or we can reserve a
                   private studio
                 </p>
 
@@ -183,8 +183,12 @@
         </div>
 
         <h2 class="CTA" id="CTA">
-          Not sure the best option for you? Email me at
-          <a href="mailto:rhispilates@gmail.com">rhispilates@gmail.com</a>
+          Not sure the best option for you? <br> Email me at
+          <a href="mailto:rhispilates@gmail.com">rhispilates@gmail.com</a> or <!-- Calendly link widget begin -->
+          <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+          <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+          <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/rhispilates/ask-rhi'});return false;"> schedule a free consultation</a>
+          <!-- Calendly link widget end -->
         </h2>
       </div>
     </section>
@@ -196,15 +200,14 @@
           <div class="col-md-6">
             <img class="lastPic" src="css/images/rhi3.jpg" alt="">
 
-            <h2 class="close">I love Pilates!</h2>
-            <h2 class="close">I love Teaching!</h2>
+            <h2 class="close">I love Pilates! I love Teaching!</h2>
             <h2 class="close">
-              And I love helping amazing people like you become the best version
-              of themself!
+              And I love watching my students achieve their goals!
             </h2>
+           <h1 class="close2">Start Your Pilates Journey Today</h1>
           </div>
-<!-- 
-          <div class="col-md-6">
+
+          <div class="col-md-6 insta">
             <blockquote
               class="instagram-media"
               data-instgrm-permalink="https://www.instagram.com/rhispilates/?utm_source=ig_embed&amp;utm_campaign=loading"
@@ -499,14 +502,14 @@
               </div>
             </blockquote>
             <script async src="//www.instagram.com/embed.js"></script>
-          </div> -->
+          </div>
 
         </div>
       </div>
     </section>
 
     <footer>
-        <p>© Copyright Rhi's Pilates</p>
+        <p>© Copyright Rhi's Pilates 2023</p>
 
     </footer>
 
