--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rhi's Pilates</title>
 
     <link rel="icon" type="image/x-icon" href="css/images/favicon.ico">
 
@@ -28,7 +28,7 @@
   <body>
     <section class="title" id="title">
       <!-- Title -->
-      <img class="hero" src="css/images/rhiHero.jpeg" alt="" />
+      <img class="hero" src="css/images/rhiHero.jpeg" alt="Pilates-Img" />
       <div class="container">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
@@ -69,7 +69,7 @@
 
         <div class="row">
           <div class="col-md-6">
-            <img class="bioPic" src="css/images/RhiBio.jpg" alt="" />
+            <img class="bioPic" src="css/images/RhiBio.jpg" alt="Rhi" />
           </div>
           <div class="col-md-6">
             <h1 class="ImRhi">Hi I'm Rhi!</h1>
@@ -198,7 +198,7 @@
         <!-- Socials -->
         <div class="row">
           <div class="col-md-6">
-            <img class="lastPic" src="css/images/rhi3.jpg" alt="">
+            <img class="lastPic" src="css/images/rhi3.jpg" alt="Rhi2">
 
             <h2 class="close">I love Pilates! I love Teaching!</h2>
             <h2 class="close">
