--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="row row-cols-1 row-cols-md-3 row-cols-md-2 g-4">
           <div class="col">
-            <div class="card" style="width: 18rem">
+            <div class="card mx-auto" style="width: 18rem">
               <img
                 src="css/images/uptownPilates.jpg"
                 class="card-img-top"
@@ -138,7 +138,7 @@
           </div>
 
           <div class="col">
-            <div class="card" style="width: 18rem">
+            <div class="card mx-auto" style="width: 18rem">
               <img
                 src="css/images/equinox.jpg"
                 class="card-img-top"
@@ -161,7 +161,7 @@
           </div>
 
           <div class="col">
-            <div class="card" style="width: 18rem">
+            <div class="card mx-auto" style="width: 18rem">
               <img
                 src="css/images/rhi2.png"
                 class="card-img-top"
